<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="top"
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="4"
        android:background="@color/colorDark">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:contentDescription="@string/app_name"
            android:src="@drawable/back"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3.5"
            android:gravity="center_vertical"
            android:text="@string/host"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ssid_placeholder"/>

            <EditText
                android:id="@+id/ssid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="text"
                android:background="@color/colorExtraDark"
                android:padding="5dp"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/price_placeholder"/>

            <EditText
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="numberDecimal"
                android:background="@color/colorExtraDark"
                android:padding="5dp"/>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/limit_placeholder"/>

            <EditText
                android:id="@+id/limit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="number"
                android:background="@color/colorExtraDark"
                android:padding="5dp"/>

        </LinearLayout>


        <TextView
            android:id="@+id/startBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:padding="15dp"
            android:gravity="center"
            android:background="@color/colorExtraDark"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>



    </LinearLayout>



</LinearLayout>