<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/wifi"
            android:contentDescription="@string/app_name" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ssid_placeholder"
                android:textColor="@color/colorExtraDark"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/ssid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/colorExtraDark"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/price_placeholder"
                android:textColor="@color/colorExtraDark"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/colorExtraDark"
                android:layout_marginTop="20dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/limit_placeholder"
                android:textColor="@color/colorExtraDark"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/colorExtraDark"
                android:layout_marginTop="20dp"/>

        </LinearLayout>


        <TextView
            android:id="@+id/disconnectBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:padding="15dp"
            android:gravity="center"
            android:background="@color/colorExtraDark"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>


    </LinearLayout>



</LinearLayout>