<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:padding="16dp"
    android:weightSum="5">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:src="@drawable/wifi"
        />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="4"
        android:paddingLeft="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ssid_placeholder"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            android:paddingTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">


            <TextView
                android:id="@+id/limit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/limit_placeholder"
                android:textColor="@color/colorDark"
                android:textSize="14sp"
                android:paddingBottom="10dp"/>


            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/price_placeholder"
                android:textColor="@color/colorDark"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:layout_gravity="end"
                android:gravity="end"/>


        </LinearLayout>

    </LinearLayout>



</LinearLayout>